# elastic_bridge

./: CMakeLists.txt  README.md  package.xml
action/: downloadPointcloud2.action
cmake/: Findefusion.cmake
launch/: elastic_bridge_k1.launch
msg/: FrameState.msg
patches/: guid.patch
src/: elastic_node.cpp  save_pcl.cpp
